--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,1 +1,11 @@
-<チャット画面>
+<div class="chat-header">
+chat-heder
+</div>
+
+<div class="messages">
+massages
+</div>
+
+<div class="form">
+form
+</div>
