--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -10,12 +10,34 @@
 .side-bar-header {
   height: 100px;
   padding: 0 20px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}.header-name a{
+  color: #FAFAFA;
+  font-size: 16px;
+  text-decoration: none;
+}.create-room a{
+  border: 1px solid lightblue;
+  text-decoration: none;
+  padding: 14px;
+  font-size: 10px;
+  color: deepskyblue;
 }
+
 .rooms {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
+}.room {
+  padding: 20px 0 40px;
+}.room-name a {
+  text-decoration: none;
+  color: white;
 }
+
 .chat {
   background-color: #FFFFFF;
   width: calc(100vw - 300px);
